# opengpts

./: .env.example  .env.gcp.yaml.example  .gitignore  TODO.md  agent-executor  agent_executor  docker-compose.yml  env.sh  gizmo_agent  langchain  langchain-google  langchain_community  langchain_core  langchain_experimental  langgraph  libs  run.sh
backend/: .gitignore  Dockerfile  pyproject.toml  redis_index_schema.yaml  requirements.txt
backend/app/: agent.py  checkpoint.py  ingest.py  llms.py  retrieval.py  server.py  storage.py  stream.py  tools.py  upload.py
backend/app/agent_types/: ffm_agent.py  ollama_agent.py  openai_agent.py  output_parser.py  prompt_template.py  tools_agent.py  xml_agent.py
backend/app/api/: assistants.py  runs.py
frontend/: Dockerfile
frontend/src/components/: Config.tsx
nginx/conf.d/: default.conf
